# Doftav1.0

./: .env.example  App.tsx  DESIGN_SYSTEM.md  GETTING_STARTED.md  IMPLEMENTATION_ROADMAP.md  PRODUCTION_PLAN.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  README.md  VERCEL_DEPLOYMENT.md  docker-compose.yml  index.html  metadata.json  package-lock.json  package.json  render.yaml  types.ts  vercel.json
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build_errors.txt  mod  render-start.sh
backend/src/: errors.rs  handlers.rs  lib.rs  main.rs  middleware.rs
backend/src/api/: mod.rs
backend/src/auth/: jwt.rs  mod.rs  models.rs
backend/src/blockchain/: mod.rs
backend/src/config/: mod.rs
backend/src/db/: mod.rs
backend/src/models/: mod.rs
backend/src/websocket/: mod.rs
components/: FarmerDashboard.tsx  Onboarding.tsx  icons.tsx
components/shared/: BottomNav.tsx  Button.tsx  Header.tsx
frontend/: .env.example  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/components/: BuyerDashboard.tsx  CarbonMinting.tsx  DeFiPortal.tsx  Governance.tsx  Landing.tsx  Marketplace.tsx  Monitoring.tsx  Onboarding.tsx  Wallet.tsx  WalletConnecting.tsx
frontend/src/components/shared/: Card.tsx
frontend/src/styles/: globals.css
migrated_prompt_history/: prompt_2026-01-13T15:08:25.021Z.json
